# the-automaton-auditor

./: .cursorrules  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/pull_request_template/: clean_formatting.md
.github/workflows/: PULL_REQUEST_TEMPLATE.md  ci.yml
audit/report_bypeer_received/: audit_report.md
audit/report_onpeer_generated/: audit_report.md
audit/report_onself_generated/: audit_report.md
docs/standards/: ci_pipeline_spec.md  code_style.md  git_protocol.md  testing_sop.md
ide-chat-history/: ide-chat-history.md
reports/: interim_report.md  interim_report_draft.md
rubric/: week2_rubric.json
src/: graph.py  main.py  state.py
src/nodes/: detectives.py  judges.py  justice.py
src/tools/: ast_analyzer.py  doc_tools.py  git_forensics.py  pdf_parser.py  repo_tools.py  vision_tools.py
src/utils/: llm_provider.py  prompts.py
tests/: conftest.py
tests/integration/: test_graph_wiring.py
tests/unit/: test_state.py  test_tools.py
