# Minimal pyproject.toml for uv
[project]
name = "the-automaton-auditor"
version = "0.1.0"
description = "Digital Courtroom Auditor for Week 2 Challenge"
authors = [
	{ name = "azazh-wuletawu" }
]
requires-python = ">=3.10"
dependencies = [
    "docling>=2.75.0",
    "google-genai>=1.65.0",
    "langchain>=1.2.10",
    "langgraph>=1.0.10",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "tree-sitter>=0.25.2",
    "typing-extensions>=4.15.0",
]
